@@ -1,15 +1,15 @@
 #!/bin/sh
 
 # pre-conditions
-. set_colors.sh
+. messages.sh
 
-is_service_running() {
+is_service_active() {
     local service="$1"
     if systemctl is-active --quiet "$service"; then
-        echo -e "${COLOR_GREEN}$service is active${COLOR_NAN}"
+        success "$service is active"
         return 0
     else
-        echo -e "${COLOR_RED}$service is inactive${COLOR_NAN}"
+        alert "$service is inactive"
         return 1
     fi
 }
