@@ -2,3 +2,4 @@
 COLOR_GREEN="\033[0;32m"
 COLOR_RED="\033[0;31m"
 COLOR_NAN="\033[0m"
+COLOR_YELLOW="\033[0;33m"
